test pr resouce from branch under origin
Signed-off-by: Tom Meyer <tmeyer@pivotal.io>

--- a/gpAux/Makefile
+++ b/gpAux/Makefile
@@ -2,6 +2,8 @@
 # Makefile for Greenplum Database
 #---------------------------------------------------------------------
 
+#This is to test pr resource
+
 # keep the default target above any targets from included makefiles
 all : devel
 
